tests/snapshots/protocols__typecheck__tests__calyx_go_done_struct.snap
---
source: src/typecheck.rs
expression: content
---
error: Type mismatch in assignment: dut.go : BitVec(32) and 1 : BitVec(1).
   ┌─ tests/calyx_go_done_struct.prot:10:3
   │
10 │   dut.go := 1;
   │   ^^^^^^^^^^^^ Type mismatch in assignment: dut.go : BitVec(32) and 1 : BitVec(1).

error: Type mismatch in assignment: dut.go : BitVec(32) and 0 : BitVec(1).
   ┌─ tests/calyx_go_done_struct.prot:14:3
   │
14 │   dut.go := 0;
   │   ^^^^^^^^^^^^ Type mismatch in assignment: dut.go : BitVec(32) and 0 : BitVec(1).

warning: Inferred RHS type as BitVec(32) from LHS type BitVec(32).
   ┌─ tests/calyx_go_done_struct.prot:15:3
   │
15 │   dut.ii := X;
   │   ^^^^^^^^^^^^ Inferred RHS type as BitVec(32) from LHS type BitVec(32).

error: Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.
   ┌─ tests/calyx_go_done_struct.prot:16:3
   │
16 │   oo := dut.oo;
   │   ^^^^^^^^^^^^^ Cannot assign to function argument. Try using assert_eq if you want to check the value of a transaction output.
